I correctly confingured gulp/sass, and made some index.html changes also started design work on the views

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   "dependencies": {},
   "deprecated": "To update or install node, go to http://nodejs.org/",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
   },
   "directories": {},
   "dist": {
