--- a/package.json
+++ b/package.json
@@ -1,71 +1,26 @@
 {
-  "_args": [
-    [
-      {
-        "raw": "node",
-        "scope": null,
-        "escapedName": "node",
-        "name": "node",
-        "rawSpec": "",
-        "spec": "latest",
-        "type": "tag"
-      },
-      "/Users/jazibnasim/Documents/lab-19"
-    ]
-  ],
-  "_defaultsLoaded": true,
-  "_engineSupported": true,
-  "_from": "node@latest",
-  "_id": "node@0.0.0",
-  "_inCache": true,
-  "_location": "/node",
-  "_nodeVersion": "v0.7.9-pre",
-  "_npmUser": {
-    "name": "isaacs",
-    "email": "i@izs.me"
-  },
-  "_npmVersion": "1.1.21",
-  "_phantomChildren": {},
-  "_requested": {
-    "raw": "node",
-    "scope": null,
-    "escapedName": "node",
-    "name": "node",
-    "rawSpec": "",
-    "spec": "latest",
-    "type": "tag"
-  },
-  "_requiredBy": [
-    "#USER"
-  ],
-  "_resolved": "https://registry.npmjs.org/node/-/node-0.0.0.tgz",
-  "_shasum": "288d62f90530c763eff8d4831ee7343ab3d60793",
-  "_shrinkwrap": null,
-  "_spec": "node",
-  "_where": "/Users/jazibnasim/Documents/lab-19",
-  "dependencies": {},
-  "deprecated": "To update or install node, go to http://nodejs.org/",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2"
-  },
-  "directories": {},
-  "dist": {
-    "shasum": "288d62f90530c763eff8d4831ee7343ab3d60793",
-    "tarball": "https://registry.npmjs.org/node/-/node-0.0.0.tgz"
-  },
+  "name": "node-js-getting-started",
+  "version": "0.2.5",
+  "description": "A sample Node.js app using Express 4",
   "engines": {
-    "node": "*"
+    "node": "5.9.1"
   },
-  "homepage": "http://nodejs.org/api",
-  "maintainers": [
-    {
-      "name": "isaacs",
-      "email": "i@izs.me"
-    }
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "ejs": "2.4.1",
+    "express": "4.13.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/heroku/node-js-getting-started"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
   ],
-  "name": "node",
-  "optionalDependencies": {},
-  "readme": "ERROR: No README data found!",
-  "version": "0.0.0"
+  "license": "MIT"
 }
